@@ -1,3 +1,8 @@
+2006-03-07 Juuso Alasuutari <juuso.alasuutari@tamperelainen.org>
+	* init.d/keymap.sh: Split include map loading into separate 
+	  scripts for kbd and console-tools due to compatibility issues 
+	  between their map sets.
+
 2006-03-06 Juuso Alasuutari <juuso.alasuutari@tamperelainen.org>
 	* init.d/keymap.sh: Fixed include map loading to understand 
 	  entries without .inc suffix. Fixed keymap loading to run only 
